# src/libs/api/post-pagination.dto.ts
@@ -1,5 +1,11 @@
-export class PostPaginationDto {
+export interface PostPaginationDto {
+  /**
+   * @minimum 0
+   */
   page?: number;
+  /**
+   * @minimum 0
+   */
   limit?: number;
   order?: 'desc' | 'asc';
 }
