# src/modules/post/queries/read-post/read-post.controller.ts
@@ -11,6 +11,15 @@ import { ResponseBase } from '@src/libs/api/response.base';
 @Controller('post')
 export class ReadPostController {
   constructor(private readonly queryBus: QueryBus) {}
+  /**
+   * 특정 게시글 조회 기능
+   *
+   * Param 을 통해 받은 postId 를 통해 , 특정 Post 를 조회한다.
+   *
+   * @tag post
+   * @param postId
+   * @returns
+   */
   @TypedRoute.Get('/:postId')
   async read(@PostId() postId: string): Promise<ResponseBase<PostProps>> {
     const query = new ReadPostQuery({ id: postId });
