# src/modules/user/queries/login-user/login-user.controller.ts
@@ -12,6 +12,15 @@ import { Result, match } from 'oxide.ts';
 @Controller('user')
 export class LoginUserController {
   constructor(private readonly queryBus: QueryBus) {}
+  /**
+   * 사용자 로그인 기능
+   *
+   * Body 를 통해 받은 loginUserProps( email , password )를 통해 User 를 검증후 , Token 을 반환한다.
+   *
+   * @tag user
+   * @param loginUserProps
+   * @returns
+   */
   @TypedRoute.Post('login')
   async login(@TypedBody() loginUserProps: LoginUserProps): Promise<string> {
     const query = new LoginUserQuery(loginUserProps);
